--- a/action.yml
+++ b/action.yml
@@ -9,6 +9,10 @@ inputs:
     description: "Version of Redpanda to use"
     required: false
     default: "latest"
+  cluster-mode:
+    description: "Whether to run Redpanda in cluster mode"
+    required: false
+    default: "false"
 runs:
   using: "docker"
   image: "Dockerfile"
