--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,7 @@ inputs:
     description: "Version of Redpanda to use"
     required: false
     default: "latest"
-  cluster-mode:
+  cluster_mode:
     description: "Whether to run Redpanda in cluster mode"
     required: false
     default: "false"
