--- a/action.yml
+++ b/action.yml
@@ -16,16 +16,19 @@ inputs:
 runs:
   using: composite
   steps:
+    - name: Cluster Input Details
+      shell: bash
+      run: |
+        echo "Starting redpanda broker/cluster with version: redpandadata/redpanda:${{ inputs.version }}"
+        echo "Cluster Mode: ${{ inputs.cluster_mode }}"
     - name: Start Redpanda Single Node Broker
       if: inputs.cluster_mode != 'true'
-      run: |
-        ls -laRt ${{ github.action_path }}/
-        docker compose -f ${{ github.action_path }}/docker-compose-single.yml up -d
+      run: REDPANDA_IMAGE_TAG="${{ inputs.version }}" docker compose -f ${{ github.action_path }}/docker-compose-single.yml up -d
       shell: bash
     - name: Start Redpanda Three Node Cluster
       shell: bash
       if: inputs.cluster_mode == 'true'
-      run: docker compose -f ${{ github.action_path }}/docker-compose-three-node-cluster.yml up -d
+      run: REDPANDA_IMAGE_TAG="${{ inputs.version }}" docker compose -f ${{ github.action_path }}/docker-compose-three-node-cluster.yml up -d
     - name: Print Redpanda cluster details
       shell: bash
       if: success()
