--- a/docker-compose-single.yml
+++ b/docker-compose-single.yml
@@ -28,7 +28,7 @@ services:
       # Tells Seastar (the framework Redpanda uses under the hood) to use 1 core on the system.
       - --smp 1
       - --default-log-level=info
-    image: docker.redpanda.com/redpandadata/redpanda:v24.2.12
+    image: docker.redpanda.com/redpandadata/redpanda:${REDPANDA_IMAGE_TAG}
     container_name: redpanda-0
     volumes:
       - redpanda-0:/var/lib/redpanda/data
